K-В tree based index